# PaperKonnyaku

./: .gitignore  README.md  pyproject.toml
src/core/: config.py
src/services/: mineru.py
src/services/extract/: __init__.py  mineru.py
src/services/render/: __init__.py  align.py  font.py  overlay.py  translation.py
src/services/translate/: __init__.py
src/services/translate/llm/: __init__.py  client.py  prompt.py  rate_limiter.py  service.py  templates.yaml
src/tests/: test_align.py  test_llm_client.py  test_mineru.py  test_overlay.py  test_rate_limiter.py  test_translate_prompt.py  test_translation_renderer.py  test_translation_service.py
