[project]
name = "paperkonnyaku"
version = "0.1.0"
description = "paperkonnyaku"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fonttools>=4.61.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "pymupdf>=1.27.1",
    "pypdf>=5.2.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pyyaml>=6.0.3",
    "reportlab>=4.4.10",
    "toml>=0.10.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
filterwarnings = [
    # Ignore SWIG-related deprecation warnings from PyMuPDF
    "ignore:builtin type SwigPyPacked:DeprecationWarning",
    "ignore:builtin type SwigPyObject:DeprecationWarning",
    "ignore:builtin type swigvarlink:DeprecationWarning",
]
